--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,13 +4,13 @@ site_name: REPO_NAME_OR_SITE_NAME
 nav:
   - Home: index.md
 
-site_author: Sunny Bhaveen Chandra
+site_author: Sukant K. Bhattacharjee
 site_description: >-
   DESCRIPTION
 
 # Repository
-repo_name: c17hawke/REPO_NAME
-repo_url: https://github.com/c17hawke/REPO_NAME
+repo_name: joysadventure/REPO_NAME
+repo_url: https://github.com/joysadventure/REPO_NAME
 
 # Configuration
 theme:
@@ -39,13 +39,12 @@ theme:
 extra:
   social:
     - icon: fontawesome/brands/github-alt
-      link: https://github.com/c17hawke
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/c17hawke
+      link: https://github.com/joysadventure
+    
+      
     - icon: fontawesome/brands/linkedin
-      link: https://linkedin.com/in/c17hawke
-    - icon: fontawesome/brands/instagram
-      link: https://www.instagram.com/c17hawke/
+      link: https://linkedin.com/in/joysadventure
+    
 
 extra_javascript:
   - javascripts/mathjax.js
@@ -70,4 +69,4 @@ plugins:
   - search
 
 copyright: |
-  &copy; 2022 <a href="https://github.com/c17hawke"  target="_blank" rel="noopener">Sunny Bhaveen Chandra</a>
+  &copy; 2022 <a href="https://github.com/joysadventure"  target="_blank" rel="noopener">Sukant K. Bhattacharjee</a>
