--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Project information
-site_name: REPO_NAME_OR_SITE_NAME
+site_name: DVC-NLP1-Project-with-docs
 # defeine TOC or order of website-
 nav:
   - Home: index.md
